# nn-base-routing

./: .gitignore  Makefile  ORGANIZATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  app.py  dense_network.json  generate_network.py  iot_network.json  iot_node.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_network_dense.json  test_network_medium.json  test_network_sparse.json  test_network_very_dense.json
examples/: test_network.json
legacy/: app.py  iot_node.py  visualize_network.py  visualize_network_pro.py
scripts/: generate_network.py
src/iot_network_routing/: __init__.py
src/iot_network_routing/cli/: __init__.py  main.py
src/iot_network_routing/core/: __init__.py  generator.py  network.py  node.py
src/iot_network_routing/utils/: __init__.py  logging_config.py  pathfinder.py  statistics.py  visualization.py
src/iot_network_routing/web/: __init__.py  app.py  run.py
static/css/: style.css
static/js/: app.js  network-visualizer.js
templates/: index.html
tests/: __init__.py
tests/integration/: __init__.py  test_color_legend.py
tests/unit/: __init__.py  test_core_functionality.py
